[project]
name = "Temporal_AI_Services"
version = "0.1.0"
description = ""
requires-python = ">=3.11"
dependencies = [
    "alembic>=1.14.1",
    "numpy>=2.2.3",
    "pandas>=2.2.3",
    "plotly>=6.0.0",
    "psycopg2-binary>=2.9.10",
    "scikit-learn>=1.6.1",
    "setuptools>=75.8.2",
    "speechrecognition>=3.14.1",
    "sqlalchemy>=2.0.38",
    "streamlit>=1.42.2",
    "tailwindcss>=0.0.1",
]
