[project]
name = "temporalvoicesdk"
version = "0.1.1"
description = "Temporal AI Voice Analytics SDK"
readme = "README.md"
requires-python = ">=3.8"
authors = [{ name = "Temporal AI Technologies Inc." }]
license = { text = "Temporal AI Technologies Inc. Proprietary License" }
dependencies = []

[project.urls]
Homepage = "https://github.com/TemporalAITech/TemporalVoiceSDK"
Repository = "https://github.com/TemporalAITech/TemporalVoiceSDK"
"Bug Tracker" = "https://github.com/TemporalAITech/TemporalVoiceSDK/issues"
